syntax = "proto3";

package isjyi.demo;

import "google/api/annotations.proto";

option go_package = ".;pb";

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string access_token = 1;
}

message RegisterRequest {
  string username = 1;
  string password = 2;
  string repeat_password = 3;
}

message RegisterResponse {
  int32 code = 1;
  string msg = 2;
}

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse) {
    option (google.api.http) = {
      post: "/v1/auth/login"
      body: "*"
    };
  };
  rpc Register(RegisterRequest) returns (RegisterResponse) {
    option (google.api.http) = {
      post: "/v1/auth/register"
      body: "*"
    };
  };
}
